package Enums;

public enum Clothes {
    POLICE, BANDIT, NORMAL
}
