package Enums;

public enum Status {
    ALIVE, DIED, CAPTURED
}

